--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=C:\\Users\\korea\\AppData\\Roaming\\NetBeans\\15\\build.properties
+user.properties.file=/Users/kiee/Library/Application Support/NetBeans/12.6/build.properties
