--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,13 +28,13 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/SecondHandShop.jar
+dist.jar=${dist.dir}/SecondHandShop_Kiet.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/SecondHandShop
+dist.jlink.output=${dist.jlink.dir}/SecondHandShop_Kiet
 excludes=
 file.reference.jcalendar-tz-1.3.3-4.jar=jcalendar-tz-1.3.3-4.jar
-file.reference.sqljdbc42.jar=driver\\sqljdbc42.jar
+file.reference.sqljdbc42.jar=driver/sqljdbc42.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -75,7 +75,7 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=SecondHandShop
+jlink.launcher.name=SecondHandShop_Kiet
 main.class=
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
