--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -33,6 +33,8 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SecondHandShop_Kiet
 excludes=
+file.reference.activation.jar=lib\\activation.jar
+file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.jcalendar-tz-1.3.3-4.jar=jcalendar-tz-1.3.3-4.jar
 file.reference.sqljdbc42.jar=driver/sqljdbc42.jar
 includes=**
@@ -40,7 +42,9 @@ jar.compress=false
 javac.classpath=\
     ${file.reference.sqljdbc42.jar}:\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.jcalendar-tz-1.3.3-4.jar}
+    ${file.reference.jcalendar-tz-1.3.3-4.jar}:\
+    ${file.reference.javax.mail.jar}:\
+    ${file.reference.activation.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
