--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -34,9 +34,21 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/SecondHandShop_Kiet
 excludes=
 file.reference.activation.jar=lib\\activation.jar
+file.reference.bridj-0.6.2-windows-only.jar=lib\\bridj-0.6.2-windows-only.jar
+file.reference.bridj-0.7.0.jar=lib\\bridj-0.7.0.jar
+file.reference.core-3.3.0.jar=lib\\core-3.3.0.jar
+file.reference.javase-3.3.0.jar=lib\\javase-3.3.0.jar
 file.reference.javax.mail.jar=lib\\javax.mail.jar
 file.reference.jcalendar-tz-1.3.3-4.jar=jcalendar-tz-1.3.3-4.jar
+file.reference.jcalendar-tz-1.3.3-4.jar-1=lib\\jcalendar-tz-1.3.3-4.jar
+file.reference.log4j-1.2.16.jar=lib\\log4j-1.2.16.jar
+file.reference.slf4j-api-1.6.2.jar=lib\\slf4j-api-1.6.2.jar
+file.reference.slf4j-api-1.7.2.jar=lib\\slf4j-api-1.7.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar=lib\\slf4j-log4j12-1.6.2.jar
 file.reference.sqljdbc42.jar=driver/sqljdbc42.jar
+file.reference.sqljdbc42.jar-1=lib\\sqljdbc42.jar
+file.reference.webcam-capture-0.3.12-javadoc.jar=lib\\webcam-capture-0.3.12-javadoc.jar
+file.reference.webcam-capture-0.3.12.jar=lib\\webcam-capture-0.3.12.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -44,7 +56,19 @@ javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.jcalendar-tz-1.3.3-4.jar}:\
     ${file.reference.javax.mail.jar}:\
-    ${file.reference.activation.jar}
+    ${file.reference.activation.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.jcalendar-tz-1.3.3-4.jar-1}:\
+    ${file.reference.sqljdbc42.jar-1}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar}:\
+    ${file.reference.slf4j-api-1.6.2.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12-javadoc.jar}:\
+    ${file.reference.bridj-0.7.0.jar}:\
+    ${file.reference.slf4j-api-1.7.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${file.reference.log4j-1.2.16.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
